--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,15 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "@mui/styled-engine-sc": "^6.0.2",
+    "@mui/x-charts": "^7.16.0",
     "@mui/x-data-grid": "^7.16.0",
+    "@mui/x-date-pickers": "^7.16.0",
+    "@mui/x-tree-view": "^7.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
